# Brotli-IIS

./: .editorconfig  .gitignore  .gitmodules  azure-pipelines.yml  building.md  license  readme.md
src/: BrotliIIS.vcxproj  BrotliIIS.vcxproj.filters  CMakeLists.txt  brotli.c  brotli.cpp  brotli.def  brotli.h  brotli.rc  brotli.rc.in  dllmain.cpp  stdafx.cpp
